// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Tag component Matches the snapshot 1`] = `
<DocumentFragment>
  <button
    class="ssb-tag"
  >
    Tag
  </button>
</DocumentFragment>
`;

exports[`Tag component Renders icon 1`] = `
<DocumentFragment>
  <button
    class="ssb-tag"
  >
    <div
      class="st-icon"
    >
      <i />
    </div>
    Tag
  </button>
</DocumentFragment>
`;

exports[`Tag component Toggles classNames correctly 1`] = `
<DocumentFragment>
  <button
    class="ssb-tag mr-4"
  >
    Tag
  </button>
</DocumentFragment>
`;
